[tool.poetry]
name = "nk2reshift"
version = "0.0.0-dev"
description = "Ableton Live control surface script for the Korg nanoKONTROL2"
authors = ["Kevin Montag"]
readme = "README.md"
packages = [{ include = "*", from = "." }]
package-mode = false

[tool.poetry.dependencies]
# This is the version needed during development (to run pylingual).
# The Live python version is 3.11.6 as of v12.1.
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
decompyle3 = "~3.9.0"
pyright = "1.1.345"
ruff = "0.1.13"

# Packages available at runtime in Live.
decorator = "5.1.0"
future = "1.0.0"
raven = "6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.11"

exclude = ["**/__pycache__/", ".git/", ".venv/", "__ext__/"]
extraPaths = ["./__ext__/System_MIDIRemoteScripts"]

# Suppress warnings about the Live module not existing.
reportMissingModuleSource = false

# Set up the virtual environment.
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py311"
# Exclude generated libs.
extend-exclude = ["__ext__"]

[tool.ruff.lint]
# - ARG: unused arguments
# - B: flake8-bugbear
# - E: pycodestyle errors
# - I: import sorting
# - W: pycodestyle warnings
extend-select = ["ARG", "B", "E", "I", "W"]
# Turn off strict max line length; B950 allows for exceeding the max
# line length in some cases.
extend-ignore = ["E501"]

[tool.ruff.lint.isort]
# Explicitly specify Live as a standard library to avoid potential
# inconsistencies across systems when sorting imports.
extra-standard-library = ["Live"]
